--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
+import Hero from "../components/Hero.astro";
 ---
 
 <BaseLayout pageTitle='test'>
-	<h2>Contenuto della index</h2>
+	<Hero />
 </BaseLayout>
