--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,3 +1,12 @@
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog/">Blog</a>
+---
+---
+
+<nav>
+    <ul class="fx">
+        <li>Menu1</li>
+        <li>Menu2</li>
+        <li>Menu3</li>
+        <li>Menu4</li>
+        <li>Menu5</li>
+    </ul>
+</nav>
