--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,12 @@
 ---
-import Navigation from "../components/Navigation.astro";
+
+/* Global css */
+import '../styles/global.css'
+
+/* Components */
+import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import Hamburger from "../components/Hamburger.astro";
+
 const pageTitle = Astro.props.pageTitle;
 ---
 
@@ -11,12 +16,10 @@ const pageTitle = Astro.props.pageTitle;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<h1>{pageTitle}</h1>
-		<Hamburger />
-		<Navigation />
+		<Header />
         <slot />
 		<Footer />
 	</body>
